--- a/Banikfy/bankerHomeStyle.css
+++ b/Banikfy/bankerHomeStyle.css
@@ -234,3 +234,209 @@ main .performance-summary .All-summary .summary .number{
     margin-left: 9rem;
     width: 60%;
 }
+
+
+
+
+
+.right .item{
+    margin-top: 11.5rem;
+    background: var(--color-dark2);
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 0.7rem;
+    padding: 1.4rem var(--card-padding);
+    border-radius: var(--border-radius-3);
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;    
+    transition: all 300ms ease;
+    width: 90%;
+}
+.right .item:hover{
+    box-shadow: none;
+}
+.right .send-announcment{
+    background-color: transparent;
+    border: 2px dashed var(--color-primary);
+    color: var(--color-primary);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.right .send-announcment div{
+    display: flex;
+}
+
+
+
+
+
+#send-announcment-popup{
+    position: fixed;
+    border-radius: var(--card-border-radius);
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 600px;
+    padding: 50px;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;    
+    background: var(--color-background);
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.5s;
+}
+#send-announcment-popup.active{
+    visibility: visible;
+    opacity: 1;
+    transition: 0.5s ;
+}
+.popUp-send-Announcements label{
+    display: block;
+    margin-top: 20px;
+    font-size: 16px;
+    font-weight: 500;
+}
+.popUp-send-Announcements input {
+    display: block;
+    height: 50px;
+    width: 100%;
+    color: white;
+    background-color: rgba(255, 255, 255, 0.07);
+    border-radius: 3px;
+    padding: 0 10px;
+    margin-top: 8px;
+    font-size: 14px;
+    font-weight: 300;
+}
+.popUp-send-Announcements select{
+    color: #edeffd;
+    display: block;
+    height: 50px;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.07);
+    border-radius: 3px;
+    padding: 0 10px;
+    margin-top: 8px;
+    font-size: 14px;
+    font-weight: 300;
+}
+.popUp-send-Announcements select option{
+    color: #080710;
+}
+.popUp-send-Announcements ::placeholder {
+    color: #e5e5e5;
+  }
+
+.popUp-send-Announcements .close-BankAccount-btn button{
+    padding: 1.4rem var(--card-padding);
+    border-radius: var(--border-radius-3);
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;    
+    transition: all 300ms ease;
+    width: 70%;
+    margin-top: 0.9rem;
+    margin-left: 5.5rem;
+    border: 2px solid;
+  }
+  .popUp-send-Announcements .close-BankAccount-btn button:hover{
+    background-color: var(--color-success);
+  }
+.popUp-send-Announcements .close-button button{
+    padding: 1.4rem var(--card-padding);
+    border-radius: var(--border-radius-3);
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;    
+    transition: all 300ms ease;
+    width: 70%;
+    margin-top: 0.9rem;
+    margin-left: 5.5rem;
+    border: 2px solid;
+}
+.popUp-send-Announcements .close-button button:hover{
+    background-color: var(--color-danger);
+}
+
+
+
+
+#CloseBankAccountSuccess{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 400px;
+    padding: 50px;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;    
+    background: var(--color-background);
+    border-radius: var(--card-border-radius);
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.5s;
+}
+#CloseBankAccountSuccess.active{
+    visibility: visible;
+    opacity: 1;
+    transition: 0.5s ;
+}
+.popupCloseBankAccountSuccess h1{
+    margin-left: 1.8rem;
+    margin-bottom: 1rem;
+}
+.popupCloseBankAccountSuccess button{
+    
+    padding: 1.4rem var(--card-padding);
+    border-radius: var(--border-radius-3);
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;    
+    transition: all 300ms ease;
+    width: 70%;
+    margin-top: 0.5rem;
+    margin-left: 2.5rem;
+    border: 2px solid;
+}
+.popupCloseBankAccountSuccess button:hover{
+    background-color: var(--color-success);
+}
+
+
+
+
+
+#SendAnnouncementSuccess{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 400px;
+    padding: 50px;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;    
+    background: var(--color-background);
+    border-radius: var(--card-border-radius);
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.5s;
+}
+#SendAnnouncementSuccess.active{
+    visibility: visible;
+    opacity: 1;
+    transition: 0.5s ;
+}
+.popupSendAnnouncementSuccess h1{
+    margin-left: 1.8rem;
+    margin-bottom: 1rem;
+}
+.popupSendAnnouncementSuccess button{
+    
+    padding: 1.4rem var(--card-padding);
+    border-radius: var(--border-radius-3);
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;    
+    transition: all 300ms ease;
+    width: 70%;
+    margin-top: 0.5rem;
+    margin-left: 2.5rem;
+    border: 2px solid;
+}
+.popupSendAnnouncementSuccess button:hover{
+    background-color: var(--color-success);
+}
