--- a/Banikfy/bankerClientStyle.css
+++ b/Banikfy/bankerClientStyle.css
@@ -191,3 +191,65 @@ aside .sidebar .notifications-count{
  font-size: 11px;
  border-radius: var(--border-radius-1);
 }
+
+
+main{
+    margin-top: 4.4rem;
+}
+main .accounts-balance{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap:2rem;
+}
+main .accounts-balance > div{
+    background: var(--color-dark2);
+    padding: var(--card-padding);
+    border-radius: var(--card-border-radius);
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+    transition: all 300ms ease;
+}
+main .accounts-balance > div:hover{
+    color: var(--color-primary);
+    box-shadow: none;
+}
+main .accounts-balance > div span{
+    background: var(--color-primary);
+    padding: 0.5rem;
+    border-radius: 50%;
+    color: var(--color-dark2);
+    font-size: 2rem;
+}
+
+main .recent-transactions{
+    margin-top: 2rem;
+}
+main .recent-transactions h2{
+    margin-bottom: 1rem;
+}
+main .recent-transactions table{
+    background: var(--color-dark2);
+    border-radius: var(--card-border-radius);
+    width: 100%;
+    padding: var(--card-padding);
+    text-align: center;
+    transition: all 300ms ease;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;    
+}
+main .recent-transactions table:hover{
+    box-shadow: none;
+}
+main table th{
+    font-size: 1rem;
+    font-weight: 800;
+}
+main table tbody td{
+    color: var(--color-white2);
+    height: 3rem;
+}
+main .recent-transactions .showall{
+    text-align: center;
+    display: block;
+    margin-top: 1.5rem;
+    margin-bottom: 1rem;
+    color: var(--color-primary);
+}
