--- a/Banikfy/reportsBankerStyle.css
+++ b/Banikfy/reportsBankerStyle.css
@@ -102,7 +102,7 @@ b{
     width: 98%;
     margin: 0 auto;
     gap: 1.8rem;
-    grid-template-columns: 17.2rem auto 23rem;
+    grid-template-columns: 17.2rem auto ;
     
 }
 .container#blur.active{
@@ -191,51 +191,98 @@ aside .sidebar .notifications-count{
  font-size: 11px;
  border-radius: var(--border-radius-1);
 }
-
+main{
+    margin-top: 4.4rem;
+}
 
 main{
     margin-top: 4.4rem;
 }
-main .accounts-balance{
+main .main-division{
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: repeat(4,1fr);
     gap:2rem;
 }
-main .accounts-balance > div{
+main .main-division > div{
     background: var(--color-dark2);
     padding: var(--card-padding);
     border-radius: var(--card-border-radius);
     box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
     transition: all 300ms ease;
+    width: 52%;
 }
-main .accounts-balance > div:hover{
+main .main-division > div:hover{
     color: var(--color-primary);
     box-shadow: none;
 }
-main .accounts-balance > div span{
+main .main-division > div span{
     background: var(--color-primary);
     padding: 0.5rem;
     border-radius: 50%;
     color: var(--color-dark2);
     font-size: 2rem;
 }
+main .main-division .client-Name{
+    margin-top: -2.5rem;
+    margin-left: 4.5rem;
+}
+main .main-division .credit-score{
+    display: flex;
+    margin-top: 1rem;
+    margin-left: 4.5rem;
+}
 
-main .recent-transactions{
+
+main .main-division .buttons{
+    display: flex;
+}
+main .main-division .buttons .accept-button button{
+    padding: 1.4rem var(--card-padding);
+    border-radius: var(--border-radius-3);
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;    
+    transition: all 300ms ease;
+    width: 100%;
+    margin-top: 1.8rem;
+    margin-left: 4.5rem;
+    border: 2px solid;
+}
+main .main-division .buttons .accept-button button:hover{
+    background-color: var(--color-success);
+}
+main .main-division .buttons .close-button button{
+    padding: 1.4rem var(--card-padding);
+    border-radius: var(--border-radius-3);
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;    
+    transition: all 300ms ease;
+    width: 80%;
+    margin-top: 1.8rem;
+    margin-left: 10.5rem;
+    border: 2px solid;
+}
+main .main-division .buttons .close-button button:hover{
+    background-color: var(--color-danger);
+}
+
+
+
+main .recent-requests{
     margin-top: 2rem;
 }
-main .recent-transactions h2{
+main .recent-requests h2{
     margin-bottom: 1rem;
 }
-main .recent-transactions table{
+main .recent-requests table{
     background: var(--color-dark2);
     border-radius: var(--card-border-radius);
-    width: 100%;
+    width: 90%;
     padding: var(--card-padding);
     text-align: center;
     transition: all 300ms ease;
     box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;    
 }
-main .recent-transactions table:hover{
+main .recent-requests table:hover{
     box-shadow: none;
 }
 main table th{
@@ -246,131 +293,137 @@ main table tbody td{
     color: var(--color-white2);
     height: 3rem;
 }
-main .recent-transactions .showall{
-    text-align: center;
+main .recent-requests .showall{
+    
     display: block;
     margin-top: 1.5rem;
+    margin-left: 40rem;
     margin-bottom: 1rem;
     color: var(--color-primary);
 }
-.right{
-    margin-top: 3.4rem;
-}
-.right .balance{
-    margin-top: 4rem;
-    background: var(--color-dark2);
-    padding: var(--card-padding);
-    border-radius: var(--card-border-radius);
-    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
-    transition: all 300ms ease;
-}
-.right .balance:hover{
-    color: var(--color-primary);
-    box-shadow: none;
-}
 
 
-.right  .item{
-    margin-top: 3.5rem;
-    background: var(--color-dark2);
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    margin-bottom: 0.7rem;
-    padding: 1.4rem var(--card-padding);
-    border-radius: var(--border-radius-3);
-    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;    
-    transition: all 300ms ease;
-    width: 90%;
-}
-.right .item:hover{
-    box-shadow: none;
-}
-
-.right .open{
-    background-color: transparent;
-    border: 2px dashed var(--color-primary);
-    color: var(--color-primary);
-    display: flex;
-    margin-bottom: 1.4rem;
-    align-items: center;
-    justify-content: center;
-}
-.right .open div{
-    display: flex;
-}
-
-
-
-#popup{
+#rejectPopUp{
     position: fixed;
     top: 50%;
-    
-    border-radius: var(--card-border-radius);
     left: 50%;
     transform: translate(-50%,-50%);
-    width: 600px;
+    width: 400px;
     padding: 50px;
     box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;    
     background: var(--color-background);
+    border-radius: var(--card-border-radius);
     visibility: hidden;
     opacity: 0;
     transition: 0.5s;
 }
-#popup.active{
+#rejectPopUp.active{
     visibility: visible;
     opacity: 1;
     transition: 0.5s ;
 }
-.popupID .card{
-    background: var(--color-dark2);
-    padding: var(--card-padding);
-    border-radius: var(--card-border-radius);
-    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
-    transition: all 300ms ease;
+.reject h1{
+    margin-left: 1.8rem;
+    margin-bottom: 1rem;
 }
-
-.popupID .card:hover{
-    color: var(--color-primary);
-    box-shadow: none;
-}
-.popupID .card span{
-    background: var(--color-primary);
-    padding: 0.5rem;
-    border-radius: 50%;
-    color: var(--color-dark2);
-    font-size: 2rem;
-}
-.popupID .card .card-info{
-    margin-top: 0.8rem;
-}
-
-
-.popupID .card .card-info .card-number{
-    background: var(--color-white);
-    border-radius: var(--border-radius-3);
-    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
-}
-
-.popupID .card.card-info .card-exp-cvv{
-    margin-top: 2rem;
-    margin-left: 1rem;
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    gap: 6rem;
-}
-
-.popupID .close-BankAccount-btn button{
+.reject button{
+    
     padding: 1.4rem var(--card-padding);
     border-radius: var(--border-radius-3);
     background-color: white;
     box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;    
     transition: all 300ms ease;
     width: 70%;
-    margin-top: 0.9rem;
-    margin-left: 5.5rem;
+    margin-top: 0.5rem;
+    margin-left: 2.5rem;
     border: 2px solid;
-  }
-  .popupID .close-BankAccount-btn button:hover{
-    background-color: var(--color-danger);
-  }
+}
+.reject button:hover{
+    background-color: var(--color-success);
+}
+
+
+
+#acceptPopUp{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 400px;
+    padding: 50px;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;    
+    background: var(--color-background);
+    border-radius: var(--card-border-radius);
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.5s;
+}
+#acceptPopUp.active{
+    visibility: visible;
+    opacity: 1;
+    transition: 0.5s ;
+}
+.accept h1{
+    margin-left: 1.8rem;
+    margin-bottom: 1rem;
+}
+.accept button{
+    
+    padding: 1.4rem var(--card-padding);
+    border-radius: var(--border-radius-3);
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;    
+    transition: all 300ms ease;
+    width: 70%;
+    margin-top: 0.5rem;
+    margin-left: 2.5rem;
+    border: 2px solid;
+}
+.accept button:hover{
+    background-color: var(--color-success);
+}
+
+
+
+#markAsSolvedID{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 400px;
+    padding: 50px;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;    
+    background: var(--color-background);
+    border-radius: var(--card-border-radius);
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.5s;
+}
+#markAsSolvedID.active{
+    visibility: visible;
+    opacity: 1;
+    transition: 0.5s ;
+}
+.markAsSolved h1{
+    margin-left: 1.8rem;
+    margin-bottom: 1rem;
+}
+.markAsSolved button{
+    
+    padding: 1.4rem var(--card-padding);
+    border-radius: var(--border-radius-3);
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;    
+    transition: all 300ms ease;
+    width: 70%;
+    margin-top: 0.5rem;
+    margin-left: 2.5rem;
+    border: 2px solid;
+}
+.markAsSolved button:hover{
+    background-color: var(--color-success);
+}
+
+
+
+
